--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -19,30 +19,42 @@ code {
 }
 
 section.wrapper {
-  max-width: 1500px;
-  max-height: 100vh;
+  max-width: 100%;
+  min-height: 100vh;
+  height: 300px;
   display: flex;
   margin: 0 auto;
 }
 
+@media (max-width: 600px) {
+  aside.contacts {
+    flex: 1 !important;
+  }
+  .messages__container {
+    display: none!important;
+}
+}
+
 aside.contacts {
-  width: 600px;
+  flex: 0.35;
   min-width: 200px;
-  height: 100vh;
+  height: 100%;
   border: 1px solid #E5E5E5;
   overflow: auto;
 
   .contacts__header {
     position: sticky;
     top: 0;
-    width: 100%;
+    max-width: 100%;
     height: 150px;
     background: #F5F5F5;
     margin-bottom: 40px;
+    z-index: 10;
 
     .contacts__avatar {
       padding: 10px;
       margin-bottom: 30px;
+
       img {
         width: 40px;
         border-radius: 50%;
@@ -51,23 +63,22 @@ aside.contacts {
 
     .contacts__search {
       position: relative;
-      max-width: 350px;
+      max-width: 100%;
       margin: 0 auto;
+      padding: 0 10px;
 
       input {
-          width: 100%;
-          padding: 7px 15px;
-          border-radius: 20px;
-          border: 1px solid #cccccc;
+        width: 100%;
+        padding: 7px 15px;
+        border-radius: 20px;
+        border: 1px solid #cccccc;
 
-          &:focus {
-            outline: 0.5px solid #969696; ;
-          }
-
+        &:focus {
+          outline: 0.5px solid #969696;
+          ;
+        }
       }
     }
-  
-
   }
 
   h3 {
@@ -82,30 +93,79 @@ aside.contacts {
     flex-direction: column;
 
 
-    & > :nth-child(1n + 2) {
+    &> :nth-child(1n + 2) {
       border-top: 1px solid #E5E5E5;
     }
 
     .user__container {
-      width: 100%;
+      max-width: 100%;
+      max-height: 200px;
       display: flex;
-      padding: 20px 10px;
+      padding: 10px 10px;
       align-items: center;
+      color: #696969;
 
       .user__info {
-        margin-left: 30px;
+        position: relative;
+        width: 100%;
+        margin-left: 10%;
+
+        .user__nickname-date {
+          display: flex;
+          justify-content: space-between;
+
+          .user__nickname {
+            font-weight: 700;
+            margin-bottom: 10px;
+          }
+
+          .user__last-message-date {
+            font-size: 14px;
+            text-align: end;
+            margin-left: auto;
+          }
+
+        }
+
+        .message__container {
+          display: flex;
+          justify-content: space-between;
+
+          .message-last {}
+
+          .newMessage__count {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 20px;
+            width: 20px;
+            font-size: 12px;
+            border-radius: 50%;
+            background-color: lightgreen;
+            color: #000;
+            margin-right: 10px;
+          }
+
+        }
+
+
+
+
       }
+
+
     }
 
     .active {
       background: #F5F5F5;
-    } 
+    }
   }
 }
 
 .messages__container {
-  width: 100%;
+  flex: 0.65;
   display: flex;
+  height: 100%;
   flex-direction: column;
 
   .messages__header {
@@ -119,50 +179,63 @@ aside.contacts {
       align-items: center;
       padding: 0 10px;
 
-        span {
-          margin-left: 10px;
-          font-weight: 700;
-        }
+      span {
+        margin-left: 10px;
+        font-weight: 700;
+      }
     }
   }
 
   .messages__canvas {
+    position: relative;
     flex: 1 1 auto;
     padding: 20px 20px;
-    background: #FAFAFA ;
+    background: #FAFAFA;
     border-top: 1px solid #E5E5E5;
     border-bottom: 1px solid #E5E5E5;
+    overflow-y: auto;
 
-    .message__container {
-      margin-bottom: 10px;
+    .message {
+      display: flex;
       width: fit-content;
       max-width: 80%;
       margin-bottom: 30px;
+      color: #fff;
 
-      .message__body {
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        width: fit-content;
-        min-height: 40px;
-        background: #cccccc;
-        border-radius: 20px;
-        padding: 5px 10px;
-        margin-bottom: 10px;
-        line-height: 1.5;
+      .message__container {
+        margin-left: 10px;
+  
+        .message__body {
+          width: fit-content;
+          display: flex;
+          align-items: center;
+          min-height: 40px;
+          margin-bottom: 10px;
 
-      }
-    
-      .message__date {
+          .message__text {
+            width: fit-content;
+            align-items: center;
+            background: #3C4252;
+            border-radius: 20px;
+            padding: 5px 10px;
+            line-height: 1.5;
+          }
 
+          .message__sender-background {
+            background: #b9b9b9;
+          }
+        }
+
+        .message__date {
+          color: #191919;
+        }
       }
     }
 
-    .message__sender {
+    .message__sender-position {
       margin-left: auto;
-      justify-self: flex-end;
+      color: #191919;
     }
-
   }
 
   .messages__text-bar {
@@ -171,8 +244,9 @@ aside.contacts {
     padding: 10px 20px;
     align-items: center;
     flex: 1 1 auto;
+    min-height: 100px;
     max-height: 150px;
-    background: #F5F5F5; 
+    background: #F5F5F5;
 
     input {
       flex: 1 1 auto;
@@ -183,7 +257,8 @@ aside.contacts {
       border: 1px solid #cccccc;
 
       &:focus {
-        outline: 0.5px solid #969696; ;
+        outline: 0.5px solid #969696;
+        ;
       }
     }
 
@@ -199,9 +274,9 @@ aside.contacts {
       font-weight: 700;
       cursor: pointer;
 
-        &:hover {
-          background: #fff !important;
-        }
+      &:hover {
+        background: #fff !important;
+      }
     }
   }
 }
@@ -212,5 +287,3 @@ aside.contacts {
     border-radius: 50%;
   }
 }
-
-
